app/assets/stylesheets/geodisy.scss
@import 'bootstrap';
@import 'geodisy/geo_footer', 'geodisy/geo_beta';

$logo-image: image_url('blacklight/geodisy.svg') !default

.navbar-logo {  /* The main logo image for the Blacklight instance */
  @if $logo-image {
    background: transparent $logo-image no-repeat top left;
  }
}

#map_instructions{
	text-align: left;
	padding-top: 2px;
}

#frdr_logo{
 margin-left: -1px;
 padding-top: 3px;
 }

 .blacklight-dc_description_s {
   white-space: pre-line;
 }

a:link {
    text-decoration: underline;
    color: #3344dd !important;
}

a:visited {
    color: #884488 !important;
}


a:hover, a:focus, a:active {
    color: #bb1122 !important;
    text-decoration: underline !important;
}

a.btn.btn-primary {
  color: white !important;
}



 a.nav-link.navbar-link, a.nav-link, a.dropdown-toggle{
 color: #FAFAFA !important;
 }

a.nav-link.navbar-link:hover, a.nav-link.navbar-link:focus, a.nav-link.navbar-link:active, a.nav-link:hover, a.nav-link:focus, a.nav-link:active, a.dropdown-toggle:hover{
    color: #343a40 !important;
    background-color: #FAFAFA;
    text-decoration: underline;
    border-radius: 5px 5px 5px 5px;
}

.submit-search-text {
  color: white !important;
}

.submit-search-text:hover {
  text-decoration: underline !important;
}
.leaflet-control-zoom-in:hover, .leaflet-control-zoom-out:hover, .leaflet-control-zoom-in:focus, .leaflet-control-zoom-out:focus, .leaflet-control-zoom-in:active, .leaflet-control-zoom-out:active {
    color: #3344dd !important;
    text-decoration: none !important;
}

a.leaflet-control-zoom-in, a.leaflet-control-zoom-out{
   color: black !important;
}

li.page-item {
  color:#3344dd;
}

li.page-item.disabled{
   color:grey !important;
}

a.page-link {
 color: inherit !important;
}

.card-header.p-0.facet-field-heading:hover, card.facet-limit.blacklight-dc_creator_sm:active, card.facet-limit.blacklight-dc_creator_sm:focus{
  background:#212529;
  color:#f7f7f7;
}

.btn.btn-block.p-2.text-left.collapse-toggle {
  background: inherit;
  color:inherit;
}

a.btn.btn-default.download.download-original{
    color: white !important;
}
.dropdown-menu>li>a {
    display: block;
    padding: 3px 20px;
    clear: both;
    font-weight: normal;
    line-height: 1.428571429;
    color: #333 !important;
    white-space: nowrap;
}
.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
    padding: 3px 20px;
    background-color: #2882bb;
    color: #FFFFFF !important;
}

a.dropdown-toggle {
padding: 8px;
}

li.data_dictionary > a {
    padding-left: 0px !important;
}

input.feature-checkbox {
    margin-left: 1px;
}

label.feature-label {
    margin-left: 20px;
}

hr.catalog-section-divider {
    border: 1px solid rgba(0,0,0,0.1);
}

.card-header {
    font-weight: 500;
}

.card.sidebar {
    margin-bottom: 16px;
    margin-top: 16px;
}

h2 > span {
    font-size: 1.70rem;
}

ul.list-group.list-group-flush {
    padding-top: 0px;
    padding-bottom: 0px;
}

hr.metadata-divider {
    margin-top: 0.25rem;
    margin-bottom: 0.25rem;
}

.document-additional-metadata.dl-invert {
 dt {
  font-weight: bold;
 }
}

.card-header {
    font-weight: 500;
}

.index_title {
    margin-bottom: 0px;
}

.index_title > span > a {
    color: black;
    font-size: 1.1em;
    margin-bottom: 0px;
    overflow-x: inherit;
    white-space: normal;
}

.index_creators {
    font-style: italic;
}

.index_date {
    font-style: italic;
}

/** Make sure the list of documents isn't shorter than the map **/
.documents-list {
    min-height: 400px;
}

.documents-list .document {
    border-bottom: 1px solid #dee2e6;
    margin-right: 15px;
    margin-left: 28px;
}

.repo-icon {
    width: 80px;
    margin-bottom: 12px;
    margin-left: 8px;
    margin-right: 8px;
}

/** xs size breakpoint **/
@media (min-width: 1px) and (max-width: 576px) {
    /**
    In mobile disable scrollbar and full height of list based on
    screensize for mobile size.
    **/
    .documents-list {
        max-height: 100%;
        height: 100%;
        overflow-y: auto;
        width: 100%;
    }

    .documents-map {
        width: 400px;
    }

    .repo-icon {
        width: 60px;
    }

    .index-details {
        width: calc(100% - 60px);
    }
}

/** sm size breakpoint **/
@media (min-width: 577px) and (max-width: 768px) {
    /**
    In mobile disable scrollbar and full height of list based on
    screensize for mobile size.
    **/
    .documents-list {
        max-height: 100%;
        height: 100%;
        overflow-y: auto;
        width: 100%;
    }

    .documents-map {
        width: 400px;
    }

    .repo-icon {
        width: 60px;
    }

    .index-details {
        width: calc(100% - 60px);
    }

}

/** md size breakpoint **/
@media (min-width: 769px) and (max-width: 992px) {
    .documents-list {
        width: calc(100% - 424px);
        max-height: calc(100vh - 280px);
        overflow-y: scroll;
    }

    .documents-map {
        width: 400px;
    }

    .repo-icon {
        width: 60px;
    }

}

/** lg size breakpoint **/
@media (min-width: 993px) and (max-width: 1200px) {
    .documents-list {
        width: calc(100% - 424px);
        max-height: calc(100vh - 280px);
        overflow-y: scroll;
    }

    .documents-map {
        width: 400px;
    }
}

/** xl size breakpoint **/
@media (min-width: 1201px) and (max-width: 1400px) {
    .documents-list {
        width: calc(100% - 424px);
        max-height: calc(100vh - 280px);
        overflow-y: scroll;
    }

    .documents-map {
        width: 400px;
    }
}

/** > xl size breakpoint **/
@media (min-width: 1401px) {
    .documents-list {
        max-height: calc(100vh - 280px);
        overflow-y: scroll;
        width: calc(100% - 524px);
    }

    .documents-map {
        width: 504px;
    }

    .container {
      max-width: 95% !important;
    }
}

[data-map="home"] {
    width: 504px;
    margin-left: auto;
    margin-right: auto;
}

.documents-map {
    margin-left: auto;
    margin-right: auto;
}

.more-info-area {
    font-size: 0.9em;
}

.index-details {
    width: calc(100% - 100px);
}

.page-links, .sort-dropdown > button, .sort-dropdown > button > span {
    font-size: 13px;
}

.blacklight-icon-restricted {
    margin-left: 6px;
}

.search-query-form {
    margin-left: auto;
    margin-right: auto;
}

.facets-heading {
    font-size: 1.1rem;
    font-weight: 600;
}

.search-details {
    max-width: 100%;
}

.facet-content {
    max-height: 230px;
    overflow-y: auto;
}

